# guide-pytest-playwright-video

./: README.md  pyproject.toml  requirements.txt  run.bat  run.sh
test/: conftest.py  test_web.py
